--- a/Campeonato_App/Campeonato_App/Views/PrincipalView.xaml
+++ b/Campeonato_App/Campeonato_App/Views/PrincipalView.xaml
@@ -7,12 +7,6 @@
              x:Class="Campeonato_App.Views.PrincipalView">
     <ContentPage.Content>
         <StackLayout>
-            
-            
-            <!--<Label Text="Welcome to Xamarin.Forms! - Lidiane"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />-->
-
             <StackLayout
                 Orientation="Horizontal">
                 <Image
@@ -50,40 +44,42 @@
             </ListView>-->
             <ListView
                  x:Name="jogosList"
-                 VerticalOptions = "FillAndExpand"
-                 HorizontalOptions = "FillAndExpand"
                  HasUnevenRows = "true">
                 <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
-                        <StackLayout Orientation="Horizontal">
-                            <Label
+                        <StackLayout Orientation="Horizontal" Padding="25, 0, 25, 0">
+                              <Label
                                     Text="{Binding selecaoCasa}"
+                                    FontSize="25"
                                     HorizontalOptions="StartAndExpand"
                                     VerticalOptions="CenterAndExpand"
                                 />
                             <Label
                                     Text="{Binding placarCasa}"
+                                    FontSize="20"
                                     HorizontalOptions="CenterAndExpand"
                                     VerticalOptions="CenterAndExpand"
                                 />
                             <Label
                                     Text="X"
+                                    FontSize="25"
                                     HorizontalOptions="CenterAndExpand"
                                     VerticalOptions="CenterAndExpand"
                                 />
                             <Label
                                     Text="{Binding placarVisitante}"
+                                    FontSize="20"
                                     HorizontalOptions="Center"
                                     VerticalOptions="CenterAndExpand"
                                 />
                             <Label
                                     Text="{Binding selecaoVisitante}"
+                                    FontSize="25"
                                     HorizontalOptions="EndAndExpand"
                                     VerticalOptions="CenterAndExpand"
                                 />
                         </StackLayout>
-
                     </ViewCell>
                 </DataTemplate>
                 </ListView.ItemTemplate>
