--- a/Campeonato_App/Campeonato_App/Views/PrincipalView.xaml
+++ b/Campeonato_App/Campeonato_App/Views/PrincipalView.xaml
@@ -7,91 +7,128 @@
              x:Class="Campeonato_App.Views.PrincipalView">
     <ContentPage.Content>
         <StackLayout>
-            
-            
-            <!--<Label Text="Welcome to Xamarin.Forms! - Lidiane"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />-->
-
             <StackLayout
-                Orientation="Horizontal">
+                Orientation="Horizontal" 
+                >
                 <Image
-                Source="baseline_clear_black_18dp.png"
-                WidthRequest = "30"
-                VerticalOptions="CenterAndExpand"
-                HorizontalOptions="Start"
-                />
-                
-            <Label
-                Text= "08/07/2020"
-                FontSize="20"
-                HorizontalOptions="Center"
-                VerticalOptions="CenterAndExpand"
-                />
-            <Image
-                Source="baseline_search_black_18dp.png"
-                WidthRequest = "30"
-                HorizontalOptions="EndAndExpand"
-                />
+                    Source="baseline_close_black_48dp.png"
+                    WidthRequest="30"
+                    HorizontalOptions="Start"
+                    VerticalOptions="CenterAndExpand"
+                    />
+                <Label 
+                    Text="08/07/2020" 
+                    FontSize="20"
+                    HorizontalOptions="Start"
+                    VerticalOptions="CenterAndExpand"
+                    />
+                <Image
+                    Source="baseline_search_black_48dp.png"
+                    WidthRequest="30"
+                    HorizontalOptions="EndAndExpand"
+                    VerticalOptions="CenterAndExpand"
+                    />
             </StackLayout>
             <Image
                 BackgroundColor="Gray"
                 HeightRequest="1"
                 HorizontalOptions="FillAndExpand"
                 />
-            <!--<ListView>
-                <ListView.ItemsSource>
-                    <x:Array Type="{x:Type x:String}">
-                        <x:String>Alemanha</x:String>
-                        <x:String>Brasil</x:String>
-                        
-                    </x:Array>
-                </ListView.ItemsSource>
-            </ListView>-->
             <ListView
                 x:Name="jogosList"
+                HasUnevenRows="True"
+                ItemsSource="{Binding jogos}"
+                SelectedItem="{Binding jogoSelecionado}"
                 >
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout
-                                Orientation="Horizontal"
+                            <StackLayout 
+                                Padding="10,0,10,0"
                                 >
-                                <Label
-                                    Text="{Binding selecaoCasa}"
-                                    HorizontalOptions="StartAndExpand"
-                                    VerticalOptions="CenterAndExpand"
-                                />
-                                <Label
-                                    Text="{Binding placarCasa}"
-                                    HorizontalOptions="CenterAndExpand"
-                                    VerticalOptions="CenterAndExpand"
-                                />
-                                <Label
-                                    Text="X"
-                                    HorizontalOptions="CenterAndExpand"
-                                    VerticalOptions="CenterAndExpand"
-                                />
-                                <Label
-                                    Text="{Binding placarVisitante}"
-                                    HorizontalOptions="Center"
-                                    VerticalOptions="CenterAndExpand"
-                                />
-                                <Label
-                                    Text="{Binding selecaoVisitante}"
-                                    HorizontalOptions="EndAndExpand"
-                                    VerticalOptions="CenterAndExpand"
-                                />
+                                <StackLayout Orientation="Horizontal">
+                                    <Label 
+                                        Text="{Binding dataFormatada}" 
+                                        HorizontalOptions="Start"
+                                        FontSize="16"
+                                        />
+                                    <Label 
+                                        Text="{Binding estadio}"  
+                                        HorizontalOptions="EndAndExpand"
+                                        FontSize="16"
+                                        />
+                                </StackLayout>
+                                <StackLayout 
+                                    Orientation="Horizontal"
+                                    >
+                                    <Image 
+                                        Source="{Binding SelecaoCasa.imgBandeira}"
+                                        WidthRequest="100"   
+                                        />
+                                    <Label
+                                        Text="{Binding placarCasa}"
+                                        HorizontalOptions="CenterAndExpand"
+                                        VerticalOptions="CenterAndExpand"
+                                        FontSize="20"
+                                        />
+                                    <Label
+                                        Text="X"
+                                        HorizontalOptions="CenterAndExpand"
+                                        VerticalOptions="CenterAndExpand"
+                                        FontSize="20"
+                                            />
+                                    <Label
+                                        Text="{Binding placarVisitante}"
+                                        HorizontalOptions="CenterAndExpand"
+                                        VerticalOptions="CenterAndExpand"
+                                        FontSize="20"
+                                        />
+                                    <Image 
+                                        Source="{Binding SelecaoVisitante.imgBandeira}"
+                                        WidthRequest="100"
+                                        />
+                                </StackLayout>
+                                <StackLayout
+                                    Orientation="Horizontal"
+                                    >
+                                    <Label
+                                        Text="{Binding SelecaoCasa.nome}"
+                                        HorizontalOptions="Start"
+                                        VerticalOptions="CenterAndExpand"
+                                        FontSize="20"
+                                        />
+                                    <StackLayout
+                                        Orientation="Horizontal"
+                                        HorizontalOptions="CenterAndExpand"
+                                        VerticalOptions="CenterAndExpand"
+                                        >
+                                        <Label
+                                            Text="{Binding penaltisCasa}"
+                                            FontSize="16"
+                                            HorizontalOptions="StartAndExpand"
+                                            />
+                                        <Label
+                                            Text="X"
+                                            FontSize="16"
+                                            />
+                                        <Label
+                                            Text="{Binding penaltisVisitante}"
+                                            FontSize="16"
+                                            HorizontalOptions="EndAndExpand"
+                                            />
+                                    </StackLayout>
+                                    <Label
+                                        Text="{Binding SelecaoVisitante.nome}"
+                                        HorizontalOptions="End"
+                                        VerticalOptions="CenterAndExpand"
+                                        FontSize="20"
+                                        />
+                                </StackLayout>
                             </StackLayout>
-                           
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
-                    
             </ListView>
-
-            
-
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
